--- a/Aktiviteter.html
+++ b/Aktiviteter.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html>
-<header>
-  UNGDOMSKLUBBEN
-</header>
-
+<head>
   <title> Ungdomsklubben </title>
+  <h1> Ungdomsklubben </h1>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <head>
-
-</style>
 <link rel="stylesheet" type="text/css" href="stil.css">
 </head>
 <!--Liste over de ulike sidene på nettsiden !-->
+<body>
   <ul>
     <li><a href="index.html">Hjem</a></li>
     <li><a href="Om Oss.html">Om oss</a></li>
