--- a/Aktiviteter.html
+++ b/Aktiviteter.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
+<header>
+  UNGDOMSKLUBBEN
+</header>
   <title> Ungdomsklubben </title>
-  <h1> Ungdomsklubben </h1>
   <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="stil.css">
-</head>
-<!--Liste over de ulike sidene på nettsiden !-->
-<body>
-  <ul>
-    <li><a href="index.html">Hjem</a></li>
-    <li><a href="Om Oss.html">Om oss</a></li>
-    <li><a href="Aktiviteter.html">Aktiviteter</a></li>
-    <li><a href="Kontakt info.html">Kontakt Info</a></li>
-  </ul>
-  </html>
+</header>
+
+<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
+
+<!-- The sidebar -->
+<div class="sidebar">
+  <a href="index.html"><i class="fas fa-home"></i> Hjem</a>
+  <a href="Om Oss.html"><i class="fas fa-address-book"></i> Om Oss</a>
+  <a href="Aktiviteter.html"><i class="fa fa-child"></i> Aktiviteter</a>
+  <a href="Kontakt info.html"><i class="fas fa-envelope"></i> Kontakt Info</a>
+</div>
