--- a/Kontakt info.html
+++ b/Kontakt info.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
+
+<header>
+  UNGDOMSKLUBBEN
+</header>
+
   <title> Ungdomsklubben </title>
-  <h1> Ungdomsklubben </h1>
+  
   <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="stil.css">
 </head>
