--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <head>
 
-</style>
+<!-- Ikon bibliotek -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <link rel="stylesheet" type="text/css" href="stil.css">
 </head>
 <!--Liste over de ulike sidene på nettsiden !-->
